# sha256D-miner-test

./: CMakeLists.txt  hash_openssl.cpp  hash_openssl.h  main.cpp
